fixed another spacing issue at top bar

--- a/css_files/styles.css
+++ b/css_files/styles.css
@@ -47,8 +47,8 @@ form div input {
 }
 
 #search {
-    display: inline-block;
-    margin-left: 19.5%;
+    display: block;
+    margin-left: 22%;
     margin-right: 7%;
 }
 
